spacing and sizes fixes

--- a/src/styles/base/_base.sass
+++ b/src/styles/base/_base.sass
@@ -17,4 +17,3 @@ h1,
 h2
   font-family: 'Canela', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif
   font-weight: 400
-  letter-spacing: 2px
