--- a/src/styles/components/_contact.sass
+++ b/src/styles/components/_contact.sass
@@ -1,10 +1,11 @@
 .contact
   &-wrap
-    padding: 2rem 1rem
+    padding: 2rem
     background: #000
 
     @media (min-width: 1200px)
       padding-top: 0
+      padding-bottom: 5rem
       background: none
 
   &-heading
@@ -13,7 +14,7 @@
     @media (min-width: 1200px)
       display: block
 
-      h4
+      h6
         margin-bottom: 0
         padding-bottom: 1rem
         border-bottom: 1px solid $grayD7
