--- a/src/styles/components/_press-list.sass
+++ b/src/styles/components/_press-list.sass
@@ -3,7 +3,7 @@
     margin: 2rem 0 0
 
     &-wrap
-      padding: 0 1rem 2rem
+      padding: 0 2rem 1rem
 
     .press-item
       padding-right: 3rem
