--- a/src/styles/sections/_content.sass
+++ b/src/styles/sections/_content.sass
@@ -1,5 +1,5 @@
 .main-description
-  padding: 2rem 1rem
+  padding: 2rem
   line-height: 2
   color: $grayC4
 
@@ -9,7 +9,7 @@
       margin-left: 50%
 
     @media (min-width: 1920px)
-      padding: 0 10rem !important
+      padding: 0 12rem !important
 
   a
     color: $grayC4
@@ -20,13 +20,14 @@
       color: #000
 
   &-header
-    padding: 2rem 1rem
+    padding: 2rem
     color: #000
 
     @media (max-width: 1199px)
       border-bottom: 1px solid $grayE1
 
     @media (min-width: 1200px)
+      padding-top: 5rem
       padding-bottom: 0
 
     h1
@@ -34,15 +35,13 @@
       font-size: 1.2em
 
       @media (min-width: 415px)
-        font-size: 3em
+        font-size: 1.5625em
 
   &-footer
-    padding: 2rem 0 0
-
     .footer-heading
-      padding: 0 1rem
+      padding: 0 2rem
 
-      h4
+      h6
         margin-bottom: 0
         padding-bottom: 1rem
         border-bottom: 1px solid $grayD7
