--- a/src/styles/sections/_photo.sass
+++ b/src/styles/sections/_photo.sass
@@ -24,7 +24,7 @@
 
   &-caption
     position: absolute
-    bottom: 5rem
+    bottom: 9rem
     left: 0
     right: 0
     padding: 0 3rem 0 1rem
@@ -33,18 +33,18 @@
     @media (min-width: 415px)
       padding: 0 6rem
 
+    @media (min-width: 1200px)
+      bottom: 5rem
+
     @media (min-width: 1920px)
-      bottom: 11rem
+      bottom: 13.5rem
 
     h2
-      font-size: 2rem
+      font-size: 2.25rem
       line-height: 1.2
 
       @media (min-width: 415px)
-        font-size: 5rem
-
-      @media (min-width: 1200px)
         font-size: 4rem
 
       @media (min-width: 1920px)
-        font-size: 5rem
+        padding-right: 10rem
